# api-cli

./: Cargo.toml  LICENSE  Makefile  README.md
.agent/skills/api-cli-mcp/: SKILL.md
.github/workflows/: server-package.yml
docs/: plan.md  server-integration-guide.md
server/: ARCHITECTURE.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
server/src/: adapters.ts  client.ts  context.ts  errors.ts  index.ts  proxy.ts  types.ts
server/test/: adapters.test.ts  client.test.ts  context.test.ts  proxy.test.ts
src/: error.rs  main.rs
src/app/: api.rs  approval.rs  auth.rs  mod.rs  provider.rs
src/cli/: mod.rs
src/domain/: mod.rs  provider.rs  session.rs
src/infra/: config.rs  crypto.rs  mod.rs
src/infra/db/: metadata.rs  mod.rs  vault.rs
src/mcp/: mod.rs
tests/: cli_integration.rs
