[package]
name = "api-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI / async
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }

# Serialize / HTTP
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# DB / Crypto
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
rand = "0.8"

# Err / Logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utility
directories = "5.0"
url = "2.5"
sha2 = "0.10"
base64 = "0.22"
axum = "0.7"
rpassword = "7.3"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
